// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CandlestickChart marker rendering snapshot: buy is a green ▲ below the candle low 1`] = `
<svg
  height="320"
  style="cursor: crosshair; display: block; opacity: 1;"
  width="600"
>
  <g>
    <line
      stroke="rgba(255,255,255,0.05)"
      stroke-width="1"
      x1="64"
      x2="580"
      y1="284"
      y2="284"
    />
    <text
      fill="#64748b"
      font-size="10"
      text-anchor="end"
      x="58"
      y="288"
    >
      $89.00
    </text>
  </g>
  <g>
    <line
      stroke="rgba(255,255,255,0.05)"
      stroke-width="1"
      x1="64"
      x2="580"
      y1="217"
      y2="217"
    />
    <text
      fill="#64748b"
      font-size="10"
      text-anchor="end"
      x="58"
      y="221"
    >
      $94.50
    </text>
  </g>
  <g>
    <line
      stroke="rgba(255,255,255,0.05)"
      stroke-width="1"
      x1="64"
      x2="580"
      y1="150"
      y2="150"
    />
    <text
      fill="#64748b"
      font-size="10"
      text-anchor="end"
      x="58"
      y="154"
    >
      $100.00
    </text>
  </g>
  <g>
    <line
      stroke="rgba(255,255,255,0.05)"
      stroke-width="1"
      x1="64"
      x2="580"
      y1="83"
      y2="83"
    />
    <text
      fill="#64748b"
      font-size="10"
      text-anchor="end"
      x="58"
      y="87"
    >
      $105.50
    </text>
  </g>
  <g>
    <line
      stroke="rgba(255,255,255,0.05)"
      stroke-width="1"
      x1="64"
      x2="580"
      y1="16"
      y2="16"
    />
    <text
      fill="#64748b"
      font-size="10"
      text-anchor="end"
      x="58"
      y="20"
    >
      $111.00
    </text>
  </g>
  <text
    fill="#64748b"
    font-size="10"
    text-anchor="middle"
    x="322"
    y="302"
  >
    01-15
  </text>
  <g>
    <line
      stroke="#10b981"
      stroke-width="1"
      x1="322"
      x2="322"
      y1="28.18181818181816"
      y2="271.8181818181818"
    />
    <rect
      fill="#10b981"
      height="60.90909090909091"
      width="14"
      x="315"
      y="89.0909090909091"
    />
    <polygon
      fill="#10b981"
      opacity="0.9"
      points="322,269 317,280 327,280"
      stroke="white"
      stroke-linejoin="round"
      stroke-width="2"
      style="cursor: pointer;"
    />
  </g>
</svg>
`;

exports[`CandlestickChart marker rendering snapshot: sell is a red ▼ above the candle high 1`] = `
<svg
  height="320"
  style="cursor: crosshair; display: block; opacity: 1;"
  width="600"
>
  <g>
    <line
      stroke="rgba(255,255,255,0.05)"
      stroke-width="1"
      x1="64"
      x2="580"
      y1="284"
      y2="284"
    />
    <text
      fill="#64748b"
      font-size="10"
      text-anchor="end"
      x="58"
      y="288"
    >
      $89.00
    </text>
  </g>
  <g>
    <line
      stroke="rgba(255,255,255,0.05)"
      stroke-width="1"
      x1="64"
      x2="580"
      y1="217"
      y2="217"
    />
    <text
      fill="#64748b"
      font-size="10"
      text-anchor="end"
      x="58"
      y="221"
    >
      $94.50
    </text>
  </g>
  <g>
    <line
      stroke="rgba(255,255,255,0.05)"
      stroke-width="1"
      x1="64"
      x2="580"
      y1="150"
      y2="150"
    />
    <text
      fill="#64748b"
      font-size="10"
      text-anchor="end"
      x="58"
      y="154"
    >
      $100.00
    </text>
  </g>
  <g>
    <line
      stroke="rgba(255,255,255,0.05)"
      stroke-width="1"
      x1="64"
      x2="580"
      y1="83"
      y2="83"
    />
    <text
      fill="#64748b"
      font-size="10"
      text-anchor="end"
      x="58"
      y="87"
    >
      $105.50
    </text>
  </g>
  <g>
    <line
      stroke="rgba(255,255,255,0.05)"
      stroke-width="1"
      x1="64"
      x2="580"
      y1="16"
      y2="16"
    />
    <text
      fill="#64748b"
      font-size="10"
      text-anchor="end"
      x="58"
      y="20"
    >
      $111.00
    </text>
  </g>
  <text
    fill="#64748b"
    font-size="10"
    text-anchor="middle"
    x="322"
    y="302"
  >
    01-15
  </text>
  <g>
    <line
      stroke="#10b981"
      stroke-width="1"
      x1="322"
      x2="322"
      y1="28.18181818181816"
      y2="271.8181818181818"
    />
    <rect
      fill="#10b981"
      height="60.90909090909091"
      width="14"
      x="315"
      y="89.0909090909091"
    />
    <polygon
      fill="#ef4444"
      opacity="0.9"
      points="317,20 327,20 322,31"
      stroke="white"
      stroke-linejoin="round"
      stroke-width="2"
      style="cursor: pointer;"
    />
  </g>
</svg>
`;
